# clustering

./: .gitignore  250527_fix_annotation.py  250528_annotation.py  250601_annotation.py  250605_review.py  250608_review_all.py  README.md  clustering_demo.ipynb  heatmap.py  main.py  pyproject.toml  subcluster.py
clustering/: subcluster.py
demo/: clustering_demo.ipynb
demo/input/: data_demo.csv  data_demo.h5ad
demo/output/clustering_demo/: clustering_sequence.txt
demo/output/clustering_demo/clustering_results/: 0d9729c5-3b53-4aba-94a3-fae4869b2799.csv  57dea970-8517-4ccb-a342-67bc006d4e46.csv  610044af-cf53-40b8-91d8-6c2de019a8ae.csv  8143371a-3c52-4494-b0a0-fef0db8357f6.csv  8586eb88-e7a6-4bb1-96eb-6ad64194e2e6.csv  cfc1f61d-77d5-48f0-9938-3d873c2669fc.csv
demo/output/clustering_demo/clustering_stash/: 0d9729c5-3b53-4aba-94a3-fae4869b2799.pickle  57dea970-8517-4ccb-a342-67bc006d4e46.pickle  610044af-cf53-40b8-91d8-6c2de019a8ae.pickle  8143371a-3c52-4494-b0a0-fef0db8357f6.pickle  8586eb88-e7a6-4bb1-96eb-6ad64194e2e6.pickle  cfc1f61d-77d5-48f0-9938-3d873c2669fc.pickle
demo/output/clustering_demo/geojson/8143371a-3c52-4494-b0a0-fef0db8357f6/: segmentation_demo.geojson
output/clustering_demo/: clustering_sequence.txt
output/clustering_demo/clustering_results/: 955cec6c-6228-4620-b9f2-a4ad8b8b4d3f.csv  a4cb36c5-4299-4c67-9ef4-389866c256fe.csv  b8494eb5-b61b-423d-beaf-c1d5790b309f.csv  da47861a-e671-48ec-8dc2-891d2bf68bea.csv
output/clustering_demo/geojson/6eb6f82a-804b-4972-af5e-ff5970d47366/: RCC-TMA609(reg_4x5)-dst=reg019-src=reg005.geojson
output/clustering_demo/geojson/cfc1f61d-77d5-48f0-9938-3d873c2669fc/: RCC-TMA609(reg_4x5)-dst=reg019-src=reg005.geojson
output/clustering_rcc/: clustering_sequence.txt
