[project]
name = "subclustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.11.4",
    "ipykernel>=6.29.5",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "phenograph>=1.5.7",
    "pycomplexheatmap>=1.8.2",
    "pydantic>=2.11.2",
    "pyqupath",
    "scanpy>=1.11.1",
    "scikit-learn>=1.5.2",
]

[tool.uv.sources]
anndata = { git = "https://github.com/scverse/anndata.git" }
pyqupath = { git = "https://github.com/wuwenrui555/pyqupath.git", rev = "v0.0.5" }
