[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clustering"
version = "0.1.0"
description = "A flexible hierarchical clustering system that supports multi-level clustering analysis of cells or other units"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anndata>=0.11.4",
    "ipykernel>=6.29.5", 
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "phenograph @ git+https://github.com/wuwenrui555/PhenoGraph.git@fix_n_jobs",
    "pycomplexheatmap>=1.8.2",
    "pydantic>=2.11.2",
    "pyqupath @ git+https://github.com/wuwenrui555/pyqupath.git@v0.0.5",
    "scanpy>=1.11.1",
    "scikit-learn>=1.5.2"
]

[project.urls]
Homepage = "https://github.com/wuwenrui555/clustering"
Repository = "https://github.com/wuwenrui555/clustering"
Issues = "https://github.com/wuwenrui555/clustering/issues"

[tool.setuptools]
packages = ["clustering"]